# matching-engine

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  limit.cpp  limit.h  main  order.h  order_book.cpp  order_book.h
src/client/: CMakeLists.txt  automated_client.cpp  orders.json
src/lib/: CMakeLists.txt  book_manager.cpp  book_manager.h  limit.cpp  limit.h  matcher_request_processor.cpp  matcher_request_processor.h  order.h  order_book.cpp  order_book.h  order_request.h  partitioned_threadpool.cpp  partitioned_threadpool.h  threadpool.cpp  threadpool.h
src/proto/: CMakeLists.txt  order_request.proto
src/svc/: CMakeLists.txt  client.cpp  main.cpp  tcp_client.cpp
tests/: CMakeLists.txt
tests/integration/: CMakeLists.txt  order_book.t.cpp
tests/unit/: CMakeLists.txt  limit.t.cpp  order_book.t.cpp  partitioned_threadpool.t.cpp  remove_units.t.cpp
